@@ -1,3 +1,7 @@
+2011-08-05  Sam Steingold  <sds@gnu.org>
+
+	* loop.tst: fix the 2011-03-31 patch
+
 2011-08-03  Sam Steingold  <sds@gnu.org>
 
 	* loop.tst: warn on REPEAT before FOR (bug#3384698)
